--- a/roles/mount/tasks/mount.yml
+++ b/roles/mount/tasks/mount.yml
@@ -1,17 +1,14 @@
-- name: create NAS folder/mount with restrictive permissions
+- name: create mount point with restrictive permissions
   file:
-    path: "{{ nas.mount_base_dir }}/{{ mount.value.name }}"
+    path: "{{ nas.mount_base_dir }}/{{ mount.key }}"
     owner: "{{ nas.user.name }}"
     group: "{{ nas.user.name }}"
-    mode: 751
-  tags: nas
+    mode: "{{ mount_directory_mode }}"
 
-- name: "mount {{ mount.key }} storage device"
+- name: "mount {{ mount.key }} NTFS storage device"
   mount:
-    path: "{{ nas.mount_base_dir }}/{{ mount.value.name }}"
+    path: "{{ nas.mount_base_dir }}/{{ mount.key }}"
     src: "UUID={{ mount.value.uuid }}"
     state: mounted
     fstype: "{{ mount.value.fstype | default('ntfs-3g') }}"
     opts: "{{ mount.value.opts | default('windows_names,permissions,defaults,noauto,locale=de_DE.utf8') }}"
-  when: mount.value.uuid is defined
-  tags: nas
