set TZ and locales on OS-level (closes #19)

--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -15,6 +15,10 @@ sshd:
     - "{{ setup_user }}"
 
 
+server_locales:
+  - de_DE.UTF-8
+server_timezone: Europe/Berlin
+
 setup_user: sebschlicht
 nas:
   hostname: pi
