--- a/setup.yml
+++ b/setup.yml
@@ -6,6 +6,8 @@
   vars:
     ansible_python_interpreter: /usr/bin/python3
   roles:
+    - role: mount
+      tags: mount
     - role: backups
       tags: always
     - role: auto-upgrade
