--- a/roles/mount/tasks/mount.yml
+++ b/roles/mount/tasks/mount.yml
@@ -1,9 +1,17 @@
+- name: check if mounted
+  shell: |
+    mountpoint -q "{{ mounts_base_dir }}/{{ mount.key }}"
+  register: mounted
+  changed_when: no
+  failed_when: no
+
 - name: create mount point with restrictive permissions
   file:
     path: "{{ mounts_base_dir }}/{{ mount.key }}"
     owner: "{{ nas.user.name }}"
     group: "{{ nas.user.name }}"
     mode: "{{ mount_directory_mode }}"
+  when: mounted.rc != 0
 
 - name: "mount {{ mount.key }} NTFS storage device"
   mount:
