restrict PHP access to required directories (closes #17)

--- a/roles/php/tasks/main.yml
+++ b/roles/php/tasks/main.yml
@@ -23,7 +23,7 @@
 
 - name: configure (fpm)
   blockinfile:
-    block: "{{ lookup('file', 'php/php.ini') }}"
+    block: "{{ lookup('template', 'php/php.ini') }}"
     dest: "/etc/php/7.3/fpm/php.ini"
     marker: "; {mark} ANSIBLE MANAGED BLOCK"
 
