--- a/roles/php/templates/php/php.ini
+++ b/roles/php/templates/php/php.ini
@@ -13,3 +13,6 @@ output_buffering = 0
 
 ; Nextcloud performance recommendation
 memory_limit = 512M
+
+; accessible directories
+open_basedir = "/dev/urandom:{{ nextcloud.data_path }}:{{ nextcloud.path }}"
