schedule a daily full minidlna re-scan

--- a/roles/minidlna/tasks/main.yml
+++ b/roles/minidlna/tasks/main.yml
@@ -14,6 +14,14 @@
     name: minidlna
     groups: "{{ nas.user.name }}"
 
+- name: schedule daily re-scan
+  cron:
+    user: minidlna
+    name: reload minidlna for full re-scan
+    job: /usr/sbin/minidlnad -R
+    hour: 5
+    minute: 0
+
 - name: configure firewall
   ufw:
     rule: allow
