Add restic backups with OpenVPN
* restic backups to local and remote repositories
  * wrapper script to create local backups and copy them to remote repositories
  * SSH setup for NAS to NAS access
* OpenVPN setup for NAS to NAS connection
  * rootless
  * automatic reconnection
  * helper script and documentation for CA setup and certificate flow
* Makefile to simplify playbook usage and OpenVPN setup
* various improvements
  * rootless miniDLNA
  * ddclient for DynV6 dynamic IP service
  * split vaults into machine-specific and global

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
 /*.retry
 /.vault_pass
 
+# default certificate authority location
+/ca/
+# files in transit to/from the certificate authority
+/files-ca-transit/
+# sensitive files distributed to OpenVPN clients
+/files/*/openvpn/ta.key
+
 /wiki
