--- a/roles/mount/tasks/mount.yml
+++ b/roles/mount/tasks/mount.yml
@@ -1,22 +1,29 @@
 - name: check if mounted
   shell: |
-    mountpoint -q "{{ mounts_base_dir }}/{{ mount.key }}"
+    mountpoint -q "{{ mountpoint }}"
   register: mounted
   changed_when: no
   failed_when: no
 
-- name: create mount point with restrictive permissions
+- name: create mount point
   file:
-    path: "{{ mounts_base_dir }}/{{ mount.key }}"
-    owner: "{{ nas.user.name }}"
-    group: "{{ nas.user.name }}"
+    path: "{{ mountpoint }}"
+    state: directory
     mode: "{{ mount_directory_mode }}"
   when: mounted.rc != 0
 
-- name: "mount {{ mount.key }} NTFS storage device"
+- name: "mount {{ mountpoint }}"
   mount:
-    path: "{{ mounts_base_dir }}/{{ mount.key }}"
-    src: "UUID={{ mount.value.uuid }}"
+    path: "{{ mountpoint }}"
+    src: "UUID={{ mount.uuid }}"
     state: mounted
-    fstype: "{{ mount.value.fstype | default('ntfs-3g') }}"
-    opts: "{{ mount.value.opts | default('defaults,windows_names,permissions,nofail,x-systemd.device-timeout=30,locale=de_DE.utf8') }}"
+    fstype: "{{ mount.fstype | default('ntfs-3g') }}"
+    opts: "{{ mount.opts | default('defaults,windows_names,permissions,nofail,x-systemd.device-timeout=30,locale=de_DE.utf8') }}"
+
+- name: make mounted device accessible
+  file:
+    path: "{{ mountpoint }}"
+    state: directory
+    owner: "{{ nas.user.name }}"
+    group: "{{ nas.user.name }}"
+    mode: "{{ mount_directory_mode }}"
