restic: use exclude homeflix via exclude file

--- a/roles/restic/defaults/main.yml
+++ b/roles/restic/defaults/main.yml
@@ -1,6 +1,7 @@
 restic_repository_password: "{{ vault_restic_repository_password }}"
 restic_config_dir: "/home/{{ nas.user.name }}/.config/restic"
 restic_password_file_path: "{{ restic_config_dir }}/password"
+restic_exclude_file_path: "{{ restic_config_dir }}/exclude.txt"
 
 restic_wrapper_log_dir: /var/log/restic
 restic_wrapper_script_dir: "/home/{{ nas.user.name }}/scripts"
